--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Psychic Game</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Psychic Game">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+</head>
+
+<body>
+<!-- This is will be displayed on screen by default -->
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-6"> <img src="assets/images/banner.jpg" alt="psychic-eye" class="img-responsive" title="The Psychic Game"> </div>
+    <div class="col-md-5"></div>
+  </div>
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-6" id="game-gui">
+      <p>
+      <h1>The Psychic Game</h1>
+      </p>
+      <p>
+      <h4>Guess my letter</h4>
+      </p>
+      <p>
+      <h4>Wins: 0</h4>
+      </p>
+      <p>
+      <h4>Losses: 0</h4>
+      </p>
+      <p>
+      <h4># Of Remaining Guesses: 9</h4>
+      </p>
+      <p>
+      <h4>Your # of guesses so far: </h4>
+      </p>
+    </div>
+    <div class="col-md-5"></div>
+  </div>
+</div>
+<script>
+// This array define the data bank of letters that the computer can select from
+var letterBank = 
+	["a", "b", "c", "d", "e", "f", "g", "h", "i", 
+	"j", "k", "l", "m", "n", "o", "p", "q", 
+	"r", "s", "t", "u", "v", "w", "x", "y", "z"];
+	
+// This section defines the global variables 
+var wins = 0;
+var losses = 0;
+	
+// userGuess holds the user's selections/guesses
+var userGuess = 0;
+//
+var remainingGuesses = 9;
+// remainingGuesses holds the amount of guesses that the user has left
+	
+var guessesSoFar = [];
+// guessesSoFar hold the amount of guesses at various points in the game and stores it in computerChoice
+	
+var computerChoice = letterBank[Math.floor(Math.random() * letterBank.length)];
+console.log("# Of Correct Guesses: " + wins + " # Of Incorrect Guesses: " + losses + " # Of Remaining Guesses: " + remainingGuesses + " # Of Guesses So Far: " + guessesSoFar + " Computer Chose: " + computerChoice);
+
+// This "event listener" function tracks the user's keystrokes
+document.onkeyup = function(event) {
+
+	// When user presses a key and lifts, this var records it and saves to userGuess in lower case
+	var userGuess = String.fromCharCode(event.keyCode).toLowerCase();
+
+	// This statement adds the user's guess to guessesSoFar array  
+	// if it wasn't already picked by the user
+	// while ensuring that the user picks an appropriate alpha key
+
+	if (guessesSoFar.indexOf(userGuess) < 0 && letterBank.indexOf(userGuess) >= 0) {
+		guessesSoFar[guessesSoFar.length]=userGuess;
+		// This statement will decrement the remaining guesses by 1
+		remainingGuesses--;
+	}
+
+	// if computerChoice is same as userGuess then a win is recorded
+	// remainingGuesses is reset to 9, and the guessesSoFar array is cleared
+	//  Choices for the computer are reset as well
+	
+	if (computerChoice == userGuess) {
+		wins++;
+		console.log("Correct Guess!");
+		remainingGuesses = 9;
+		guessesSoFar = [];
+		computerChoice = letterBank[Math.floor(Math.random() * letterBank.length)];
+		console.log("# Of Correct Guesses: " + wins + " # Of Incorrect Guesses:: " + losses + " # Of Remaining Guesses: " + remainingGuesses + " # Of Guesses So Far: " + guessesSoFar + " Computer Chose: " + computerChoice);
+	}
+
+	// if remaining guesses = 0 then a loss is recorded
+	// remainingGuesses is reset to 9, and the guessesSoFar array is cleared
+	// Choices for the computer are reset as well
+	
+	if (remainingGuesses == 0) {
+		losses++;
+		console.log("You Did Not Guess Correctly... Try Again!");
+		remainingGuesses = 9;
+		guessesSoFar = [];
+		computerChoice = letterBank[Math.floor(Math.random() * letterBank.length)];
+		console.log("# Of Correct Guesses: " + wins + " # Of Incorrect Guesses: " + losses + " # Of Remaining Guesses: " + remainingGuesses + " # Of Guesses So Far: " + guessesSoFar + " Computer Chose: " + computerChoice);
+	}
+
+	// Displaying GUI
+	var html = "<p><h1>The Psychic Game</h1></p>" + "<p><h4>Guess my letter</h4></p>" + "<p><h4>Wins: " + wins + "</h4></p>" + "<p><h4># Of Incorrect Guesses: " + losses + "</h4></p>" + "<p><h4># Of Remaining Guesses: " + remainingGuesses + "</h4></p>" + "<p><h4>Your guesses so far: " + guessesSoFar + "</h4></p>";
+	// place html into the game ID
+	document.querySelector("#game-gui").innerHTML = html;
+};
+	
+
+		</script>
+</body>
+</html>
